force-app/main/default/objects/Refurbished_Items__c/Refurbished_Items__c.object-meta.xml
<CustomObject>
    <label>Refurbished Items</label>
    <nameField>
        <label>Refurbished Items Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Refurbished Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>