force-app/main/default/objects/Refurbished_Items__c/fields/Place__c.field-meta.xml
<CustomField>
    <fullName>Place__c</fullName>
    <label>Place</label>
    <type>TextArea</type>
</CustomField>