force-app/main/default/objects/Refurbished_Items__c/fields/Refurbished_Times__c.field-meta.xml
<CustomField>
    <fullName>Refurbished_Times__c</fullName>
    <label>Refurbished Times</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>