force-app/main/default/objects/Refurbished_Items__c/validationRules/Price_should_not_be_more_than_10k.validationRule-meta.xml
<ValidationRule>
    <fullName>Price_should_not_be_more_than_10k</fullName>
    <active>true</active>
    <description>Make sure price should not exceed more than 10,000.</description>
    <errorConditionFormula>Price__c  &gt; 10000</errorConditionFormula>
    <errorDisplayField>Price__c</errorDisplayField>
    <errorMessage>Pricing cannot exceed more than 10k.</errorMessage>
</ValidationRule>